--- a/src/components/homeIntro.css
+++ b/src/components/homeIntro.css
@@ -1,14 +1,43 @@
-.button {
-    width: 150px;
-    padding: 10px;
-    border: 1px solid #000000;
-    border-radius: 8px;
+
+h1 {
+    margin: 0px;
+    font-weight: 400;
+    color: #F4CE14;
 }
 
-.button p {
-    width: 100%;
-    margin: auto;
-    text-align: center ;
-    font-size: 1em;
-    
+.two-columns{
+    width: 100vw;
+    margin: 0px 0px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    gap: 0px;
+    background-color: #495e57;
+    color: #ffffff;
 }
+
+.text-part{
+    width: 50%;
+    margin: 20px 0px 20px 150px;
+}
+
+.text-part p{
+    width: 50%;
+}
+
+.offbeat-picture {
+    position: relative;
+    width: 50%;
+}
+
+.offbeat-picture img {
+    max-width: 50%;
+    width: 300px;
+    height: 300px;
+    position: relative;
+    top: 80px;
+    border-radius: 10px;
+    object-fit: cover;
+}
+
