--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -1,8 +1,9 @@
 nav {
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     flex-direction: row;
+    align-items: center;
 }
 
 nav ul{
@@ -10,12 +11,12 @@ nav ul{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    gap: 10px;
+    gap: 20px;
 }
 
 nav ul a {
     color: #000000;
     text-decoration: none;
-    font-size: 12px;
+    font-size: 15px;
     font-weight: bold;
 }
