--- a/src/components/home.css
+++ b/src/components/home.css
@@ -1,8 +1,10 @@
 
 
-.home-vert-presentation {
+.home-container {
+    margin: 0;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center
 }
 
