--- a/src/components/specializations.css
+++ b/src/components/specializations.css
@@ -1,7 +1,6 @@
 
 .specials-container {
-    width: 100%;
-    margin: 75px 0px 0px 0px;
+    margin: 75px 0px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -11,7 +10,7 @@
 .specials-title-container{
     display: flex;
     flex-direction: row;
-    gap: 150px
+    gap: 150px;
 }
 
 .specials-button {
@@ -25,5 +24,11 @@
 }
 
 .specials-offers{
-    
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
+
 }
