--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,29 @@
 
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.page-intro-banner{
+  width : 100vw;
+}
+
+.page-intro-banner img{
+  width: 100%;
+  height: 20vw;
+  object-fit: cover;
+}
+
+.section-title1{
+  font-family: 'Markazi Text';
+  font-weight: bold;
+  font-size: 50px;
+}
+
+.section-title2{
+  font-family: 'Markazi Text';
+  font-weight: bold;
+  font-size: 45px;
+}
+
+.section-title3{
+  font-family: 'Markazi Text';
+  font-weight: bold;
+  font-size: 50px;
 }
