--- a/src/components/home.css
+++ b/src/components/home.css
@@ -1,10 +1,16 @@
 
-
 .home-container {
     margin: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center
+    align-items: center;
+    gap: 30px;
 }
+
+
+
+
+
+
 
