--- a/src/components/specialisations-card.css
+++ b/src/components/specialisations-card.css
@@ -5,18 +5,22 @@
     flex-direction: column;
     border-radius: 10px 10px 0px 0px;
     background-color: #edefee;
+    box-shadow: 5px 0px 5px rgba(0, 0, 0, 0.3);
+}
+.card:hover {
+    transform: scale(1.01);
 }
 
 .card-pic img{
     width: 100%;
-    height: 200px; 
+    height: 200px;
     border-radius: 10px 10px 0px 0px;
     object-fit: cover;
 }
 
 .card-text-container{
     padding: 20px;
-    height: 250px;
+    height: 280px;
 }
 
 .card-title p{
@@ -27,10 +31,10 @@
 
 .card-description p{
     width: 100%;
-    height: 130px;
+    height: 170px;
     font-family: 'Karla';
     word-wrap: break-word;
-    overflow-wrap: break-word; 
+    overflow-wrap: break-word;
 }
 
 .delivery-link {
@@ -40,9 +44,18 @@
     justify-content: left;
     gap: 15px;
 }
+.delivery-link:hover {
+    cursor: pointer;
+    transform: scale(1.05);
+}
+.delivery-link:active{
+    transform: scale(0.95);
+}
+
 .delivery-link p{
     font-family: 'Markazi Text';
     font-weight: bold;
+    font-size: 18px;
 }
 
 .delivery-link img {
