--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,11 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Markazi Text';
   margin: 0;
 }
+
+h1 {
+  font-size: 50px;
+}
+
+h3{
+  font-size: 25px;
+}
