--- a/src/components/reservations-page.css
+++ b/src/components/reservations-page.css
@@ -1,3 +1,10 @@
+h2 {
+    color: #495e57;
+    font-size: 50px;
+    font-weight: bold;
+    text-shadow: 1em black;
+}
+
 .reservations-page-container {
     margin: 0;
     padding-bottom: 20px;
